// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`field view hooks > renders Disabled 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-size="sm"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-size="sm"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
        style="--input-label-size: var(--mantine-font-size-sm);"
      >
        $
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-disabled="true"
        data-size="sm"
        data-variant="default"
        style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
      >
        <input
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-disabled="true"
          data-variant="default"
          disabled=""
          id="mantine-12voha2vo"
          name="$"
          value="xxx"
        />
      </div>
    </div>
    <div
      class="m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="padding: var(--mantine-spacing-sm);"
    >
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      >
        $.a
      </p>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          data-size="sm"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            data-size="sm"
            for="mantine-1fu8n1fu8"
            id="mantine-1fu8n1fu8-label"
            style="--input-label-size: var(--mantine-font-size-sm);"
          >
            $ (child)
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-disabled="true"
            data-size="sm"
            data-variant="default"
            style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
          >
            <input
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-disabled="true"
              data-variant="default"
              disabled=""
              id="mantine-1fu8n1fu8"
              name="$"
              value="yyy"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`field view hooks > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-size="sm"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-size="sm"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
        style="--input-label-size: var(--mantine-font-size-sm);"
      >
        $
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-size="sm"
        data-variant="default"
        style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
      >
        <input
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$"
          value=""
        />
      </div>
    </div>
    <div
      class="m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="padding: var(--mantine-spacing-sm);"
    >
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      >
        $.a
      </p>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          data-size="sm"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            data-size="sm"
            for="mantine-1fu8n1fu8"
            id="mantine-1fu8n1fu8-label"
            style="--input-label-size: var(--mantine-font-size-sm);"
          >
            $ (child)
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-size="sm"
            data-variant="default"
            style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
          >
            <input
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-1fu8n1fu8"
              name="$"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`field view hooks > renders Errors 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
      data-size="sm"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-size="sm"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
        style="--input-label-size: var(--mantine-font-size-sm);"
      >
        $
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-size="sm"
        data-variant="default"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2); --input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
      >
        <input
          aria-describedby="mantine-12voha2vo-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$"
          value="xxx"
        />
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        data-size="sm"
        id="mantine-12voha2vo-error"
        style="--input-error-size: calc(var(--mantine-font-size-sm) - calc(0.125rem * var(--mantine-scale)));"
      >
        error form error
      </p>
    </div>
    <div
      class="m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="padding: var(--mantine-spacing-sm);"
    >
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      >
        $.a
      </p>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          data-error="true"
          data-size="sm"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            data-size="sm"
            for="mantine-1fu8n1fu8"
            id="mantine-1fu8n1fu8-label"
            style="--input-label-size: var(--mantine-font-size-sm);"
          >
            $ (child)
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-error="true"
            data-size="sm"
            data-variant="default"
            style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2); --input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
          >
            <input
              aria-describedby="mantine-1fu8n1fu8-error"
              aria-invalid="true"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-error="true"
              data-variant="default"
              id="mantine-1fu8n1fu8"
              name="$"
              value="xxx"
            />
          </div>
          <p
            class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
            data-size="sm"
            id="mantine-1fu8n1fu8-error"
            style="--input-error-size: calc(var(--mantine-font-size-sm) - calc(0.125rem * var(--mantine-scale)));"
          >
            error sub form error
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`field view hooks > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-size="sm"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-size="sm"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
        style="--input-label-size: var(--mantine-font-size-sm);"
      >
        $
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-size="sm"
        data-variant="default"
        style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
      >
        <input
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$"
          value="Hello"
        />
      </div>
    </div>
    <div
      class="m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="padding: var(--mantine-spacing-sm);"
    >
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      >
        $.a
      </p>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          data-size="sm"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            data-size="sm"
            for="mantine-1fu8n1fu8"
            id="mantine-1fu8n1fu8-label"
            style="--input-label-size: var(--mantine-font-size-sm);"
          >
            $ (child)
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-size="sm"
            data-variant="default"
            style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
          >
            <input
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-1fu8n1fu8"
              name="$"
              value="World"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`field view hooks > renders Required 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-size="sm"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        data-size="sm"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
        style="--input-label-size: var(--mantine-font-size-sm);"
      >
        $
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-size="sm"
        data-variant="default"
        style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
      >
        <input
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$"
          required=""
          value="xxx"
        />
      </div>
    </div>
    <div
      class="m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="padding: var(--mantine-spacing-sm);"
    >
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      >
        $.a
      </p>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          data-size="sm"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            data-required="true"
            data-size="sm"
            for="mantine-1fu8n1fu8"
            id="mantine-1fu8n1fu8-label"
            style="--input-label-size: var(--mantine-font-size-sm);"
          >
            $ (child)
            <span
              aria-hidden="true"
              class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-size="sm"
            data-variant="default"
            style="--input-height: var(--input-height-sm); --input-fz: var(--mantine-font-size-sm);"
          >
            <input
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-1fu8n1fu8"
              name="$"
              required=""
              value="yyy"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`field view hooks > renders parentFieldLabel 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  $
</div>
`;

exports[`field view hooks > renders subFieldLabel 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    




  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  $ (child)
</div>
`;
